--- a/components/soccer/match-detail/general-info/style.scss
+++ b/components/soccer/match-detail/general-info/style.scss
@@ -73,7 +73,7 @@
     width: 5rem;
     position: absolute;
     right: 3rem;
-    .mobile {
+    .mobile & {
       font-size: 1.6rem;
       right: .8rem;
     }
