--- a/components/common/date-bar/style.scss
+++ b/components/common/date-bar/style.scss
@@ -53,8 +53,8 @@
   flex-wrap: wrap;
   width: 100%;
   align-items: center;
-  height: 7.2rem;
   font-size: 1.4rem;
+  height: 6.2rem;
   .date-item,
     .datepicker-wrapper {
       flex-grow: 1;
@@ -62,7 +62,7 @@
       max-width: 100%;
       text-align: center;
       vertical-align: middle;
-      padding: 1.9rem 1.8rem;
+      padding: 1.4rem 1.8rem;
       cursor: pointer;
 
       .mobile & {        
@@ -71,13 +71,17 @@
       }
     }
   .date-item.live-score {
-    padding: 2.5rem 1.8rem 2.2rem;
+    padding: 2.1rem 1.8rem 1.8rem;
     .mobile & {
       padding: 1.4rem 1rem 1.2rem;
     }
   }
 
   .days {
+    text-transform: uppercase;
+  }
+
+  .format-date {
     text-transform: uppercase;
   }
 
