--- a/components/layout/header/navbar/Navbar.scss
+++ b/components/layout/header/navbar/Navbar.scss
@@ -63,6 +63,9 @@
 
   .menu-item.active {
     background: rgba($color: #000000, $alpha: 0.12);
+    .nav-link {
+      color: #FF7D00;
+    }
   }
 
   .nav-link {
