--- a/components/soccer/table/row/style.scss
+++ b/components/soccer/table/row/style.scss
@@ -72,7 +72,7 @@
 
 .mobile {
     td {
-        border: .005rem solid #DEDEDE;
+        border: 0.5px solid #DEDEDE;
         padding: 0.4rem;
     }
 }
