--- a/components/soccer/filter-bar/style.scss
+++ b/components/soccer/filter-bar/style.scss
@@ -127,7 +127,7 @@
   display: flex;
   justify-content: space-between;
   padding: 1.2rem 1.8rem;
-  border-bottom: 0.1rem solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
   .mobile & {
     justify-content: center;
     background-color: #1b3464;
@@ -166,7 +166,7 @@
   .league-search {
     height: 3.9rem;
     border-radius: 0.4rem;
-    border: 0.1rem solid #ced4da;
+    border: 1px solid #ced4da;
   }
 
   .search-section {
@@ -246,7 +246,7 @@
   box-shadow: 0 0.1rem 0.4rem rgba(0, 0, 0, 0.25);
   .action-item {
     padding: 0.8rem 1.8rem;
-    border-top: 0.1rem solid #2d4470;
+    border-top: 1px solid #2d4470;
   }
 }
 
