--- a/components/soccer/match-detail/general-info/style.scss
+++ b/components/soccer/match-detail/general-info/style.scss
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0.8rem;
-  border-bottom: 0.1rem solid #dee2e6;
+  border-bottom: 1px solid #dee2e6;
   align-items: center;
 
   .league-name,
