--- a/components/soccer/table/header/header.scss
+++ b/components/soccer/table/header/header.scss
@@ -7,6 +7,6 @@
         font-weight: normal;
         font-size: 1.2rem;
         height: 4.2rem;
-        border-bottom: .1rem solid #DFDFDF;
+        border-bottom: 1px solid #DFDFDF;
     }
 }
