--- a/pages/basketball/style.scss
+++ b/pages/basketball/style.scss
@@ -100,10 +100,10 @@ $leagueColor: ( 0: #CD5E31, 1: #ED1B24, 2: #055888, 3: #C5822F, 4: #C03000, 5: #
     font-weight: normal;
     font-size: 1.2rem;
     height: 4.2rem;
-    border-bottom: .1rem solid #DFDFDF;
+    border-bottom: 1px solid #DFDFDF;
   }
   .table td {
-    border: .005rem solid #DFDFDF;
+    border: 0.5px solid #DFDFDF;
     padding: 0.4rem;
   }
   .table .text-extra {
